<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Owner">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/premises_rounded_layout"
        android:elevation="15dp"
        android:layout_margin="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_sr_code"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr"
                android:text="Sr no:"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_code"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/_0045"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_date"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/_12_12_2021"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_name"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_name"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:text="@string/lorem_ipsum"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_status"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_code"
                android:textColor="@color/gray"
                android:textSize="@dimen/_9ssp"
                android:text="@string/_46899"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status"
                android:layout_weight="2"
                android:textColor="@color/green_active"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:gravity="end"
                android:text="@string/assigned"/>
        </LinearLayout>




    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/premises_rounded_layout"
        android:elevation="15dp"
        android:layout_margin="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_2"
                android:text="Sr no:"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_code_2"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/_0045"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_date_2"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/_12_12_2021"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_name_2"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_name_2"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:text="@string/lorem_ipsum"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_status_2"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_code_2"
                android:textColor="@color/gray"
                android:textSize="@dimen/_9ssp"
                android:text="@string/_46899"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_2"
                android:layout_weight="2"
                android:textColor="@color/green_active"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:gravity="end"
                android:text="@string/assigned"/>
        </LinearLayout>




    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/premises_rounded_layout"
        android:elevation="15dp"
        android:layout_margin="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_sr_code_3"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_3"
                android:text="Sr no:"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_code_3"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/_0045"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_date_3"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/_12_12_2021"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_name_3"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_name_3"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:text="@string/lorem_ipsum"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_status_3"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_code_3"
                android:textColor="@color/gray"
                android:textSize="@dimen/_9ssp"
                android:text="@string/_46899"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_3"
                android:layout_weight="2"
                android:textColor="@color/green_active"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:gravity="end"
                android:text="@string/assigned"/>
        </LinearLayout>




    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/premises_rounded_layout"
        android:elevation="15dp"
        android:layout_margin="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_sr_code_4"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_4"
                android:text="Sr no:"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_code_4"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/_0045"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_date_4"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/_12_12_2021"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_name_4"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_name_4"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:text="@string/lorem_ipsum"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_status_4"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_code_4"
                android:textColor="@color/gray"
                android:textSize="@dimen/_9ssp"
                android:text="@string/_46899"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_4"
                android:layout_weight="2"
                android:textColor="@color/green_active"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:gravity="end"
                android:text="@string/assigned"/>
        </LinearLayout>




    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/premises_rounded_layout"
        android:elevation="15dp"
        android:layout_margin="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_sr_code_5"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_5"
                android:text="Sr no:"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_code_5"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/_0045"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_sr_date_5"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/_12_12_2021"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_name_5"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_name_5"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:text="@string/lorem_ipsum"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_status_5"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_code_5"
                android:textColor="@color/gray"
                android:textSize="@dimen/_9ssp"
                android:text="@string/_46899"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_owner_status_5"
                android:layout_weight="2"
                android:textColor="@color/green_active"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:gravity="end"
                android:text="@string/assigned"/>
        </LinearLayout>




    </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>
</ScrollView>